--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "typescript-eslint": "^8.46.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
-    "vitest-canvas-mock": "^0.3.3"
+    "vitest-canvas-mock": "^0.3.3",
+    "zod": "^4.1.12"
   },
   "prettier": {
     "semi": false,
