chore: apply React2Shell patch, upgrade Storybook v10, migrate to npm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,27 +23,27 @@
     "scss"
   ],
   "files.exclude": {
-    "yarn.lock": true,
-    "tsconfig.json": true,
-    "toolkit": true,
-    "stylelint.config.mjs": true,
-    "package.json": true,
-    "next.config.ts": true,
-    "next-env.d.ts": true,
-    "eslint.config.mjs": true,
-    ".gitignore": true,
-    ".editorconfig": true,
-    "node_modules": true,
-    ".vscode": true,
-    ".vitest": true,
-    ".scripts": true,
-    ".next": true,
-    ".husky": true,
-    ".storybook/manager.js": true,
-    ".storybook/main.ts": true,
-    "vite.config.ts": true,
-    ".env": true,
-    ".env.example": true
+    "package-lock.json": false,
+    "tsconfig.json": false,
+    "toolkit": false,
+    "stylelint.config.mjs": false,
+    "package.json": false,
+    "next.config.ts": false,
+    "next-env.d.ts": false,
+    "eslint.config.mjs": false,
+    ".gitignore": false,
+    ".editorconfig": false,
+    "node_modules": false,
+    ".vscode": false,
+    ".vitest": false,
+    ".scripts": false,
+    ".next": false,
+    ".husky": false,
+    ".storybook/manager.js": false,
+    ".storybook/main.ts": false,
+    "vite.config.ts": false,
+    ".env": false,
+    ".env.example": false
   },
   "search.exclude": {
     "node_modules": true,
